<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="@dimen/text_margin_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".DealActivity">


            <EditText
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/text_margin_medium"
                android:hint="@string/text_title_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txtPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="@dimen/text_margin_medium"
                android:layout_marginEnd="@dimen/text_margin_medium"
                android:hint="@string/price_hint"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

            <EditText
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="@dimen/text_margin_medium"
                android:layout_marginEnd="@dimen/text_margin_medium"
                android:hint="@string/description_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrice" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDescription"
                app:srcCompat="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:layout_marginStart="0dp"
                android:layout_marginTop="@dimen/text_margin_medium"
                android:layout_marginEnd="@dimen/text_margin_medium"/>

            <Button
                android:id="@+id/btnImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_medium"
                android:layout_marginEnd="@dimen/text_margin_medium"
                android:background="@drawable/btn_rounded_corner"
                android:paddingLeft="@dimen/text_margin_large"
                android:paddingTop="@dimen/text_margin_medium"
                android:paddingRight="@dimen/text_margin_large"
                android:paddingBottom="@dimen/text_margin_medium"
                android:text="@string/txt_upload_image"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>